# AEMET-weather-wrapper

./: .gitignore  README.md  aemet-weather-wrapper.py  aemet_weather_wrapper.py  setup.cfg  test_main.py  weather-config.py  weather_config.py
misc/: forecast_class_draw.drawio
src/: aemet_weather_wrapper.py  weather_config.py
