[metadata]
name = aemet_library_python-Nekuake
version = 0.0.1
author = Nekuake
author_email = ruizale55@gmail.com
description = Get the forecast of any place in Spain in consistent manner.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Nekuake/AEMET-weather-wrapper
project_urls =
    https://github.com/Nekuake/AEMET-weather-wrapper
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src